Update research project

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <li style="margin-bottom: 1.5em;"><strong>Pose Estimation and Responsible AI</strong>: I'm currently working on integrating pose estimation techniques with ethical AI principles as part of an ongoing research project in Colby's HUMANE Lab.</li>
 
-        <li style="margin-bottom: 1.5em;"><strong>AI for Environmental Sustainability</strong>: I developed a drone image dataset and trained a computer vision model to detect coastal litter in Maine, achieving ~92% accuracy and supporting local recycling efforts.</li>
+        <li style="margin-bottom: 1.5em;"><strong>AI for Environmental Sustainability</strong>: I helped develop a drone image dataset (containing around 1k images) and trained a computer vision model to detect coastal litter in Maine, achieving ~92% accuracy and supporting local recycling efforts.</li>
     </ul>
     </section>
 
