--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="announcement-banner">
-    🎓 I'm currently seeking a PhD position for Fall 2026. <a href="#about">Learn more about me →</a>
+    🎓 I'm currently seeking a PhD position for Fall 2026.</a>
     </div>
   <header>
     <div class="container">
       <img src="profile.jpg" alt="Profile Photo" class="profile-photo" />
-      <h1>Cathy Fan</h1>
+      <h1>Chengyu "Cathy" Fan</h1>
       <p class="subtitle">Devoted in technology and human progress</p>
 
       <button class="cv-button" onclick="openModal()">Show CV</button>
@@ -33,16 +33,16 @@
     <section id="about">
         <h2>About Me</h2>
         <p style="margin-bottom: 1.5em;">
-        I'm Chengyu Fan (go by "Cathy"), a senior undergraduate student at Colby College majoring in Computer Science (AI concentration) and Mathematical Sciences, with a minor in Statistics. My research lies at the intersection of artificial intelligence, multimodal interaction, and large language models.
+        I'm Chengyu Fan (go by "Cathy"), a senior undergraduate student at Colby College majoring in Computer Science (AI concentration) and Mathematical Sciences, with a minor in Statistics.
         </p>
         <p style="margin-bottom: 1.5em;">
-        I've conducted research across a range of topics including multimodal coordination, LLM-based agent simulation, and pose estimation. My work has been published at ACM ICMI and ACM UMAP, and has involved close interdisciplinary collaboration between computer science and psychology.
+        I've been conducting research since freshman year across a range of topics including multimodal coordination, LLM-based agent simulation, and computer vision (specifically pose estimation). My work has been published at ACM ICMI and ACM UMAP, and has involved close interdisciplinary collaboration between computer science and psychology.
         </p>
         <p style="margin-bottom: 1.5em;">
         I'm especially passionate about building intelligent systems that engage with human behavior in socially responsible and interpretable ways. I enjoy working with multi-agent simulations, generative models, and applied machine learning pipelines — always with an eye toward ethical deployment.
         </p>
         <p style="margin-bottom: 1.5em;">
-        I'm currently seeking a PhD position starting in Fall 2026, where I hope to deepen my research in responsible AI, agent modeling, and multimodal interaction.  If you are a faculty member, or know of an open position in a lab, I would love to connect.
+        I'm currently seeking a PhD position starting in Fall 2026, where I hope to deepen my research in responsible AI, agent modeling, and multimodal interaction, computer vision and responsible AI.  If you are a faculty member, or know of an open position in a lab, I would love to connect.
         </p>
      
     </section>
