add google scholar

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
           <li><a href="#about">About</a></li>
           <li><a href="#research">Research</a></li>
           <li><a href="#publications">Publications</a></li>
+          <li>
+            <a href="https://scholar.google.com/citations?hl=en&user=ijsIo2wAAAAJ" target="_blank">
+              Google Scholar
+            </a>
+          </li>
         </ul>
       </nav>
     </div>
