add emoji to the announcement banner

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div class="announcement-banner">
-    🎓 I'm currently seeking a PhD position for Fall 2026.</a>
+    🤗 Actively seeking a PhD position for Fall 2026</a>
     </div>
+
   <header>
     <div class="container">
       <img src="profile.jpg" alt="Profile Photo" class="profile-photo" />
