Quick update on the bio

--- a/index.html
+++ b/index.html
@@ -37,33 +37,70 @@
 
   <main class="container">
     <section id="about">
-        <h2>About Me</h2>
+        <h2>About Me </h2>
         <p style="margin-bottom: 1.5em;">
-        I'm Chengyu Fan (go by "Cathy"), a senior undergraduate student at Colby College majoring in Computer Science (AI concentration) and Mathematical Sciences, with a minor in Statistics.
+        I'm Chengyu Fan (go by "Cathy"), a senior undergraduate student at Colby College majoring in Computer Science (AI concentration) and Mathematical Sciences, 
+        with a minor in Statistics.
         </p>
         <p style="margin-bottom: 1.5em;">
-        I've been conducting research since freshman year across a range of topics including multimodal coordination, LLM-based agent simulation, and computer vision (specifically pose estimation). My work has been published at ACM ICMI and ACM UMAP, and has involved close interdisciplinary collaboration between computer science and psychology.
+        I am very grateful that I have been working on several research projects about <strong>computer vision (specifically pose estimation)</strong>, <strong>LLM-driven agent simulation</strong>, to <strong>multimodal interaction for conversation analysis</strong>, and always with an eye toward  <strong>Responsible AI</strong>.
         </p>
         <p style="margin-bottom: 1.5em;">
-        I'm especially passionate about building intelligent systems that engage with human behavior in socially responsible and interpretable ways. I enjoy working with multi-agent simulations, generative models, and applied machine learning pipelines — always with an eye toward ethical deployment.
-        </p>
-        <p style="margin-bottom: 1.5em;">
-        I'm currently seeking a PhD position starting in Fall 2026, where I hope to deepen my research in responsible AI, agent modeling, and multimodal interaction, computer vision and responsible AI.  If you are a faculty member, or know of an open position in a lab, I would love to connect.
+        I'm currently seeking a PhD position starting in Fall 2026, where I hope to deepen my research in responsible AI, agent modeling, and multimodal interaction, computer vision. If you are a faculty member, or know of an open position in a lab, I would love to connect.
         </p>
      
     </section>
 
-    <section id="research">
-    <h2>Research</h2>
-    <ul>
-        <li style="margin-bottom: 1.5em;"><strong>Multimodal Human Coordination</strong>: I co-authored a study on quantifying human movement coordination through multimodal alignment techniques. This research, combining computer science and psychology, was published at <em>ACM ICMI 2024</em>.</li>
+    <section id="research" style="padding: 2em 0; font-family: sans-serif;">
+      <h2 style="text-align: center; margin-bottom: 1em;">Research</h2>
 
-        <li style="margin-bottom: 1.5em;"><strong>LLM-Based Agent Simulation</strong>: At Colby's Davis Institute for AI, I helped build a persistent multi-agent simulation platform (Comp-HuSim) using large language models to simulate digital personalities. This work was published at <em>ACM UMAP 2024</em>.</li>
+      <div style="display: flex; flex-direction: column; gap: 2em; max-width: 900px; margin: auto;">
 
-        <li style="margin-bottom: 1.5em;"><strong>Pose Estimation and Responsible AI</strong>: I'm currently working on integrating pose estimation techniques with ethical AI principles as part of an ongoing research project in Colby's HUMANE Lab.</li>
+        <!-- Research Card -->
+        <div style="display: flex; flex-wrap: wrap; gap: 1em; align-items: center;">
+          <div style="flex: 1; min-width: 250px;">
+            <img src="images/multimodal_coordination.jpg" alt="Multimodal Human Coordination" style="width: 100%; border-radius: 6px;">
+          </div>
+          <div style="flex: 2; min-width: 280px;">
+            <h3>Multimodal Human Coordination</h3>
+            <p>I co-authored a study on quantifying human movement coordination through multimodal alignment techniques. This research, combining computer science and psychology, was published at <em>ACM ICMI 2024</em>.</p>
+          </div>
+        </div>
 
-        <li style="margin-bottom: 1.5em;"><strong>AI for Environmental Sustainability</strong>: I helped develop a drone image dataset (containing around 1k images) and trained a computer vision model to detect coastal litter in Maine, achieving ~92% accuracy and supporting local recycling efforts.</li>
-    </ul>
+        <!-- Research Card -->
+        <div style="display: flex; flex-wrap: wrap; gap: 1em; align-items: center;">
+          <div style="flex: 1; min-width: 250px;">
+            <video src="videos/agent_simulation_demo.mp4" controls style="width: 100%; border-radius: 6px;"></video>
+          </div>
+          <div style="flex: 2; min-width: 280px;">
+            <h3>LLM-Based Agent Simulation</h3>
+            <p>At Colby's Davis Institute for AI, I helped build a persistent multi-agent simulation platform (Comp-HuSim) using large language models to simulate digital personalities. This work was published at <em>ACM UMAP 2024</em>.</p>
+          </div>
+        </div>
+
+        <!-- Research Card -->
+        <div style="display: flex; flex-wrap: wrap; gap: 1em; align-items: center;">
+          <div style="flex: 1; min-width: 250px;">
+            <img src="images/pose_estimation.jpg" alt="Pose Estimation" style="width: 100%; border-radius: 6px;">
+          </div>
+          <div style="flex: 2; min-width: 280px;">
+            <h3>Pose Estimation and Responsible AI</h3>
+            <p>Currently integrating pose estimation techniques with ethical AI principles as part of an ongoing research project in Colby's HUMANE Lab, including proposing an occlusion index for robustness assessment.</p>
+          </div>
+        </div>
+
+        <!-- Research Card -->
+        <div style="display: flex; flex-wrap: wrap; gap: 1em; align-items: center;">
+          <div style="flex: 1; min-width: 250px;">
+            <img src="images/marine_debris.jpg" alt="AI for Environmental Sustainability" style="width: 100%; border-radius: 6px;">
+          </div>
+          <div style="flex: 2; min-width: 280px;">
+            <h3>AI for Environmental Sustainability</h3>
+            <p>Developed a drone image dataset (~1k images) and trained a computer vision model to detect coastal litter in Maine, achieving ~92% accuracy and supporting local recycling efforts.</p>
+          </div>
+        </div>
+
+      </div>
     </section>
 
     <section id="publications">
