update about me and publications

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li><a href="#research">Research</a></li>
           <li><a href="#publications">Publications</a></li>
           <li>
-            <a href="https://scholar.google.com/citations?hl=en&user=ijsIo2wAAAAJ" target="_blank">
+            <a href="https://scholar.google.com/citations?user=ijsIo2wAAAAJ&hl=en" target="_blank">
               Google Scholar
             </a>
           </li>
@@ -39,14 +39,43 @@
     <section id="about">
         <h2>About Me </h2>
         <p style="margin-bottom: 1.5em;">
-        I'm Chengyu Fan (go by "Cathy"), a senior undergraduate student at Colby College majoring in Computer Science (AI concentration) and Mathematical Sciences, 
+        Hi, I'm Cathy (or go by my legal name: Chengyu, which is a little tricky to <a href="https://translate.google.com/?hl=zh-CN&sl=zh-TW&tl=zh-CN&text=%E9%AA%8B%E9%92%B0&op=translate" target="_blank" class="name-link">pronounce</a>). I am a senior undergraduate student at Colby College majoring in Computer Science (AI concentration) and Mathematical Sciences, 
         with a minor in Statistics.
         </p>
+
         <p style="margin-bottom: 1.5em;">
-        I am very grateful that I have been working on several research projects about <strong>computer vision (specifically pose estimation)</strong>, <strong>LLM-driven agent simulation</strong>, to <strong>multimodal interaction for conversation analysis</strong>, and always with an eye toward  <strong>Responsible AI</strong>.
+        My current research focuses on improving the <strong>reliability and robustness of human pose estimation systems</strong> by tackling two challenges: annotation quality and edge cases in training data (e.g. occlusion) under the supervision of   
+        <a href="https://sites.google.com/view/tahiyachowdhury" target="_blank" class="prof-link">
+              Dr. Tahiya Chowdhury
+        </a>. This project, which I will extend into my senior honors thesis, contributes to multimodal interaction by improving how systems interpret and respond to complex human body movements.  
+        In addition, I am going to work under 
+        <a href="https://stacyadoore.com/" target="_blank" class="prof-link">
+          Dr. Stacy Doore 
+        </a> on <strong>machine learning methods for generating accessible art descriptions in museums for people with visual impairments</strong>.
         </p>
+
         <p style="margin-bottom: 1.5em;">
-        I'm currently seeking a PhD position starting in Fall 2026, where I hope to deepen my research in responsible AI, agent modeling, and multimodal interaction, computer vision. If you are a faculty member, or know of an open position in a lab, I would love to connect.
+        I'm also grateful to have the opportunities to work on several research projects on <strong>computer vision</strong>, <strong>LLM-driven agent simulation</strong>, and <strong>multimodal interaction for conversation analysis</strong> under the guidance of 
+        <!-- link to be added -->
+        <a href="https://amandastent.net/" target="_blank" class="prof-link">
+          Dr. Amanda Stent
+        </a>,
+        <!-- link to be verified -->
+        <a href="https://share.google/wBI46g5uRWnLMqWFZ" target="_blank" class="prof-link">
+            Dr. Michael Yankoski
+        </a>, 
+        <!-- link to be verified -->
+        <a href="https://www.wm.edu/as/data-science/people/ford-trenton.php" target="_blank" class="prof-link">
+          Dr. Trenton Ford
+        </a>, and 
+        <!-- link to be verified -->
+        <a href="https://veroromero.weebly.com/" target="_blank" class="prof-link">
+          Dr. Veronica Romero
+        </a>.
+        </p>
+
+        <p style="margin-bottom: 1.5em;">
+        Looking ahead, I am seeking a PhD position starting in Fall 2026, where I hope to further explore research in computer vision, multimodal AI, and responsible AI. If you are a faculty member, or know of an open position in a lab, I would love to connect.
         </p>
      
     </section>
@@ -73,8 +102,8 @@
             <video src="videos/agent_simulation_demo.mp4" controls style="width: 100%; border-radius: 6px;"></video>
           </div>
           <div style="flex: 2; min-width: 280px;">
-            <h3>LLM-Based Agent Simulation</h3>
-            <p>At Colby's Davis Institute for AI, I helped build a persistent multi-agent simulation platform (Comp-HuSim) using large language models to simulate digital personalities. This work was published at <em>ACM UMAP 2024</em>.</p>
+            <h3>Comp-Husim: LLM-based agent simulation</h3>
+            <p>At Colby's Davis Institute for AI, I helped build a persistent multi-agent simulation platform (Comp-HuSim:Complex Human Simulation) using large language models to simulate agents with digital personalities</em>.</p>
           </div>
         </div>
 
@@ -105,27 +134,26 @@
 
     <section id="publications">
   <h2>Publications</h2>
-
+  <p><small>Note: * indicates equal contribution</small></p>
   <div class="publication-entry">
     <div class="pub-meta">
-      <p class="pub-authors"><strong>Fan, C.</strong>, Romero, V., Paxton, A., & Chowdhury, T.</p>
       <p class="pub-title">
-        <a href="https://doi.org/10.1145/3686215.3690149" target="_blank">
+        <a href="https://doi.org/10.1145/3686215.3690149" target="_blank" margin-bottom="">
           Towards Multimodality: Comparing Quantifications of Movement Coordination
         </a>
       </p>
+      <p class="pub-authors"><strong>Fan, C.</strong>, Romero, V., Paxton, A., & Chowdhury, T.</p>
       <p class="pub-venue"><em>ACM ICMI '24</em></p>
     </div>
   </div>
 
   <div class="publication-entry">
     <div class="pub-meta">
-      <p class="pub-authors"><strong>Fan, C.</strong>, Tariq, Z., Bhuiyan, N. S., Yankoski, M. G., & Ford, T. W.</p>
       <p class="pub-title">
         <a href="https://doi.org/10.1145/3631700.3664883" target="_blank">
           Comp-HuSim: Persistent Digital Personality Simulation Platform
         </a>
-      </p>
+      <p class="pub-authors"><strong>Fan, C.*</strong>, Tariq, Z*., Bhuiyan, N. S., Yankoski, M. G., & Ford, T. W.</p>
       <p class="pub-venue"><em>ACM UMAP '24</em></p>
     </div>
   </div>
@@ -137,7 +165,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Cathy Fan</p>
+      <p>&copy; 2025 Cathy Fan. Last updated: August 2025.</p>
     </div>
   </footer>
 
