modify research cards but still need supplementary media

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
         <!-- Research Card -->
         <div style="display: flex; flex-wrap: wrap; gap: 1em; align-items: center;">
           <div style="flex: 1; min-width: 250px;">
-            <img src="images/multimodal_coordination.jpg" alt="Multimodal Human Coordination" style="width: 100%; border-radius: 6px;">
+            <img src="images/multimodal_coordination.jpg" alt="Movement Coordination in Dyadic Conversations" style="width: 100%; border-radius: 6px;">
           </div>
           <div style="flex: 2; min-width: 280px;">
-            <h3>Multimodal Human Coordination</h3>
-            <p>I co-authored a study on quantifying human movement coordination through multimodal alignment techniques. This research, combining computer science and psychology, was published at <em>ACM ICMI 2024</em>.</p>
+            <h3>Movement Coordination in Dyadic Conversations</h3>
+            <p>This research, combining computer science and psychology, adopted methods such as Cross-recurrence Quantification Analysis (CRQA), Dynamic Time Warping (DTW), and Convergent Cross Mapping (CCM) to quantify human movement coordination. </p>
           </div>
         </div>
 
@@ -113,7 +113,7 @@
             <img src="images/pose_estimation.jpg" alt="Pose Estimation" style="width: 100%; border-radius: 6px;">
           </div>
           <div style="flex: 2; min-width: 280px;">
-            <h3>Pose Estimation and Responsible AI</h3>
+            <h3>Pose Estimation and Responsible Multimodal Interaction</h3>
             <p>Currently integrating pose estimation techniques with ethical AI principles as part of an ongoing research project in Colby's HUMANE Lab, including proposing an occlusion index for robustness assessment.</p>
           </div>
         </div>
