--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="google-site-verification" content="anLNFr_oDVKDmuvPel0drhtFdkgSXsdZba_IDbphNZc" />
-  <title>Cathy Fan</title>
+  <meta name="description" content="Cathy Fan -- Computer Science & AI Research, Colby College">
+  <title>Chengyu "Cathy" Fan</title>
   <link rel="icon" href="assets/favicon_optimized.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Chengyu 'Cathy' Fan -- Computer Science & AI Research" />
+  <meta property="og:description" content="Undergraduate Researcher at Colby College. Actively seeking a PhD position for Fall 2026." />
+  <meta property="og:image" content="profile.jpg" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://chengyu-cathy-fan.github.io/" />
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Chengyu Cathy Fan",
+    "alternateName": ["Cathy Fan", "Chengyu Fan"],
+    "jobTitle": "Undergraduate Researcher",
+    "affiliation": {
+      "@type": "CollegeOrUniversity",
+      "name": "Colby College"
+    },
+    "sameAs": [
+      "https://scholar.google.com/citations?user=ijsIo2wAAAAJ&hl=en"
+    ]
+  }
+  </script>
 </head>
 <body>
     <div class="announcement-banner">
