--- a/index.html
+++ b/index.html
@@ -318,5 +318,23 @@
     };
   </script>
 
+  <div class="badge-base LI-profile-badge" 
+     data-locale="en_US" 
+     data-size="medium" 
+     data-theme="light" 
+     data-type="VERTICAL" 
+     data-vanity="chengyu-cathy-fan-38578b245" 
+     data-version="v1">
+  <a class="badge-base__link LI-simple-link" 
+     href="https://www.linkedin.com/in/chengyu-cathy-fan-38578b245?trk=profile-badge">
+     Chengyu (Cathy) Fan
+  </a>
+</div>
+
+<script src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
+
+
+
 </body>
 </html>
