--- a/index.html
+++ b/index.html
@@ -107,57 +107,56 @@
      
     </section>
 
-    <section id="research" style="padding: 2em 0; font-family: sans-serif;">
-      <h2 style="text-align: center; margin-bottom: 1em;">Research</h2>
+    <section id="research">
+    <h2 style="text-align: center; margin-bottom: 1em;">Research</h2>
 
-      <div style="display: flex; flex-direction: column; gap: 2em; max-width: 900px; margin: auto;">
-
-        <!-- Research Card -->
-        <div style="display: flex; flex-wrap: wrap; gap: 1em; align-items: center;">
-          <div style="flex: 1; min-width: 250px;">
-            <img src="images/multimodal_coordination.jpg" alt="Movement Coordination in Dyadic Conversations" style="width: 100%; border-radius: 6px;">
-          </div>
-          <div style="flex: 2; min-width: 280px;">
-            <h3>Movement Coordination in Dyadic Conversations</h3>
-            <p>This research, combining computer science and psychology, adopted methods such as Cross-recurrence Quantification Analysis (CRQA), Dynamic Time Warping (DTW), and Convergent Cross Mapping (CCM) to quantify human movement coordination. </p>
-          </div>
+    <div class="research-cards">
+      <!-- Card 1 -->
+      <div class="research-card">
+        <div class="research-media">
+          <img src="images/multimodal_coordination.jpg" alt="Movement Coordination in Dyadic Conversations">
         </div>
-
-        <!-- Research Card -->
-        <div style="display: flex; flex-wrap: wrap; gap: 1em; align-items: center;">
-          <div style="flex: 1; min-width: 250px;">
-            <video src="videos/agent_simulation_demo.mp4" controls style="width: 100%; border-radius: 6px;"></video>
-          </div>
-          <div style="flex: 2; min-width: 280px;">
-            <h3>Comp-Husim: LLM-based agent simulation</h3>
-            <p>At Colby's Davis Institute for AI, I helped build a persistent multi-agent simulation platform (Comp-HuSim:Complex Human Simulation) using large language models to simulate agents with digital personalities</em>.</p>
-          </div>
+        <div class="research-text">
+          <h3>Movement Coordination in Dyadic Conversations</h3>
+          <p>This research, combining computer science and psychology, adopted methods such as Cross-recurrence Quantification Analysis (CRQA), Dynamic Time Warping (DTW), and Convergent Cross Mapping (CCM) to quantify human movement coordination.</p>
         </div>
-
-        <!-- Research Card -->
-        <div style="display: flex; flex-wrap: wrap; gap: 1em; align-items: center;">
-          <div style="flex: 1; min-width: 250px;">
-            <img src="images/pose_estimation.jpg" alt="Pose Estimation" style="width: 100%; border-radius: 6px;">
-          </div>
-          <div style="flex: 2; min-width: 280px;">
-            <h3>Pose Estimation and Responsible Multimodal Interaction</h3>
-            <p>Currently integrating pose estimation techniques with ethical AI principles as part of an ongoing research project in Colby's HUMANE Lab, including proposing an occlusion index for robustness assessment.</p>
-          </div>
-        </div>
-
-        <!-- Research Card -->
-        <div style="display: flex; flex-wrap: wrap; gap: 1em; align-items: center;">
-          <div style="flex: 1; min-width: 250px;">
-            <img src="images/marine_debris.jpg" alt="AI for Environmental Sustainability" style="width: 100%; border-radius: 6px;">
-          </div>
-          <div style="flex: 2; min-width: 280px;">
-            <h3>AI for Environmental Sustainability</h3>
-            <p>Developed a drone image dataset (~1k images) and trained a computer vision model to detect coastal litter in Maine, achieving ~92% accuracy and supporting local recycling efforts.</p>
-          </div>
-        </div>
-
       </div>
-    </section>
+
+      <!-- Card 2 -->
+      <div class="research-card">
+        <div class="research-media">
+          <video src="videos/agent_simulation_demo.mp4" controls></video>
+        </div>
+        <div class="research-text">
+          <h3>Comp-Husim: LLM-based agent simulation</h3>
+          <p>At Colby's Davis Institute for AI, I helped build a persistent multi-agent simulation platform (Comp-HuSim:Complex Human Simulation) using large language models to simulate agents with digital personalities.</p>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="research-card">
+        <div class="research-media">
+          <img src="images/pose_estimation.jpg" alt="Pose Estimation">
+        </div>
+        <div class="research-text">
+          <h3>Pose Estimation and Responsible Multimodal Interaction</h3>
+          <p>Currently integrating pose estimation techniques with ethical AI principles as part of an ongoing research project in Colby's HUMANE Lab, including proposing an occlusion index for robustness assessment.</p>
+        </div>
+      </div>
+
+      <!-- Card 4 -->
+      <div class="research-card">
+        <div class="research-media">
+          <img src="images/marine_debris.jpg" alt="AI for Environmental Sustainability">
+        </div>
+        <div class="research-text">
+          <h3>AI for Environmental Sustainability</h3>
+          <p>Developed a drone image dataset (~1k images) and trained a computer vision model to detect coastal litter in Maine, achieving ~92% accuracy and supporting local recycling efforts.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
     <section id="publications">
   <h2>Publications</h2>
@@ -332,7 +331,6 @@
 </div>
 
 <script src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-
 
 
 
