--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </p>
 
         <p style="margin-bottom: 1.5em;">
-        I'm also grateful to have the opportunities to work on several research projects on <strong>computer vision</strong>, <strong>LLM-driven agent simulation</strong>, and <strong>multimodal interaction for conversation analysis</strong> under the guidance of 
+        I'm also grateful to have had the opportunity to work on research projects in <strong>computer vision</strong>, <strong>LLM-driven agent simulation</strong>, and <strong>multimodal interaction for conversation analysis</strong> under the guidance of 
         <!-- link to be added -->
         <a href="https://amandastent.net/" target="_blank" class="prof-link">
           Dr. Amanda Stent
@@ -158,13 +158,33 @@
   </section>
 
 
-    <section id="publications">
+  <section id="publications">
   <h2>Publications</h2>
   <p><small>Note: * indicates equal contribution</small></p>
+   <div class="publication-entry">
+    <div class="pub-meta">
+      <p class="pub-title">
+        PoseDoc: An Interactive Tool for Efficient Keypoint Annotation in Human Pose Estimation
+      </p>
+      <p class="pub-authors"><strong>Fan, C.</strong> & Chowdhury, T.</p>
+      <p class="pub-venue"><em>ACM ICMI '25</em> (Accepted, to appear)</p>
+    </div>
+  </div>
+
   <div class="publication-entry">
     <div class="pub-meta">
       <p class="pub-title">
-        <a href="https://doi.org/10.1145/3686215.3690149" target="_blank" margin-bottom="">
+        When Pose Estimation Fails: Measuring Occlusion for Reliable Multimodal Interaction
+      </p>
+      <p class="pub-authors"><strong>Fan, C.</strong> & Chowdhury, T.</p>
+      <p class="pub-venue"><em>ICMI Companion '25</em> (Accepted, to appear)</p>
+    </div>
+  </div>
+
+  <div class="publication-entry">
+    <div class="pub-meta">
+      <p class="pub-title">
+        <a href="https://doi.org/10.1145/3686215.3690149" target="_blank">
           Towards Multimodality: Comparing Quantifications of Movement Coordination
         </a>
       </p>
@@ -179,6 +199,7 @@
         <a href="https://doi.org/10.1145/3631700.3664883" target="_blank">
           Comp-HuSim: Persistent Digital Personality Simulation Platform
         </a>
+      </p>
       <p class="pub-authors"><strong>Fan, C.*</strong>, Tariq, Z*., Bhuiyan, N. S., Yankoski, M. G., & Ford, T. W.</p>
       <p class="pub-venue"><em>ACM UMAP '24</em></p>
     </div>
