try the new favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="google-site-verification" content="anLNFr_oDVKDmuvPel0drhtFdkgSXsdZba_IDbphNZc" />
   <meta name="description" content="Cathy Fan -- Computer Science & AI Research, Colby College">
   <title>Chengyu "Cathy" Fan</title>
-  <link rel="icon" href="assets/favicon_optimized.png" type="image/png" />
+  <link rel="icon" href="assets/favicon_monkey.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
 
   <!-- Open Graph -->
