Update publication venue

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         When Pose Estimation Fails: Measuring Occlusion for Reliable Multimodal Interaction
       </p>
       <p class="pub-authors"><strong>Fan, C.</strong> & Chowdhury, T.</p>
-      <p class="pub-venue"><em>ICMI Companion '25</em> (Accepted, to appear)</p>
+      <p class="pub-venue"><em>ACM ICMI '25</em> (Accepted, to appear)</p>
     </div>
   </div>
 
