test with different alternatename for search queries

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   {
     "@context": "https://schema.org",
     "@type": "Person",
-    "name": "Chengyu Cathy Fan",
-    "alternateName": ["Cathy Fan", "Chengyu Fan"],
+    "name": "Chengyu Fan",
+    "alternateName": ["Cathy Fan", "Chengyu Cathy Fan", "Cathy Fan Colby College", "Chengyu Fan Colby College"],
     "jobTitle": "Undergraduate Researcher",
     "affiliation": {
       "@type": "CollegeOrUniversity",
