Update research media layout

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta name="google-site-verification" content="anLNFr_oDVKDmuvPel0drhtFdkgSXsdZba_IDbphNZc" />
   <meta name="description" content="Cathy Fan -- Computer Science & AI Research, Colby College">
   <title>Chengyu Cathy Fan</title>
-  <title>Chengyu Cathy Fan</title>
   <link rel="icon" href="assets/favicon_monkey.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
 
   <!-- Open Graph -->
-  <meta property="og:title" content="Chengyu 'Cathy' Fan -- Computer Science & AI Research" />
+  <meta property="og:title" content="Chengyu Fan -- Computer Science & AI Research at Colby College" />
   <meta property="og:description" content="Undergraduate Researcher at Colby College. Actively seeking a PhD position for Fall 2026." />
   <meta property="og:image" content="profile.jpg" />
   <meta property="og:type" content="website" />
@@ -22,7 +21,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Person",
-    "name": "Chengyu Fan",
+    "name": "Cathy Fan",
     "alternateName": ["Cathy Fan", "Chengyu Cathy Fan", "Cathy Fan Colby College", "Chengyu Fan Colby College"],
     "jobTitle": "Undergraduate Researcher",
     "affiliation": {
@@ -148,11 +147,17 @@
       <!-- Card 3 -->
       <div class="research-card">
       <div class="research-media">
-        <video controls poster="assets/images/pose_estimation.png" width="100%">
-          <source src="https://drive.google.com/file/d/1P5e4O-SzSvz63ivAttGNMdDahA8qI6Xy/view?usp=sharing" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
+      <img src="assets/images/pose_estimation.png" alt="Pose Estimation Demo" class="research-image">
+
+      <!-- Supplementary video button -->
+      <div class="video-links">
+        <button onclick="window.open('https://drive.google.com/file/d/1P5e4O-SzSvz63ivAttGNMdDahA8qI6Xy/view?usp=sharing', '_blank')">
+          Watch Demo
+        </button>
+
       </div>
+      </div>
+
       <div class="research-text">
         <h3>Pose Estimation and Responsible Multimodal Interaction</h3>
         <p>
@@ -163,7 +168,6 @@
     </div>
 
     </div>
-
 
       <!-- Card 4 -->
       <div class="research-card">
@@ -373,8 +377,6 @@
 </div>
 
 <script src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-
-
 
 </body>
 </html>
