--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="google-site-verification" content="anLNFr_oDVKDmuvPel0drhtFdkgSXsdZba_IDbphNZc" />
   <meta name="description" content="Cathy Fan -- Computer Science & AI Research, Colby College">
-  <title>Cathy Fan</title>
+  <title>Chengyu Cathy Fan</title>
   <link rel="icon" href="assets/favicon_monkey.png" type="image/png" />
   <link rel="stylesheet" href="style.css" />
 
