Change name for search query

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Person",
-    "name": "Cathy Fan",
+    "name": "Cathy Fan Colby College",
     "alternateName": ["Cathy Fan", "Chengyu Cathy Fan", "Cathy Fan Colby College", "Chengyu Fan Colby College"],
     "jobTitle": "Undergraduate Researcher",
     "affiliation": {
