--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@
    <div class="publication-entry">
     <div class="pub-meta">
       <p class="pub-title">
+        <a href="https://dl.acm.org/doi/10.1145/3716553.3757090" target="_blank">
         PoseDoc: An Interactive Tool for Efficient Keypoint Annotation in Human Pose Estimation
+        </a>
       </p>
       <p class="pub-authors"><strong>Fan, C.</strong> & Chowdhury, T.</p>
       <p class="pub-venue"><em>ACM ICMI '25</em> (Accepted, to appear)</p>
@@ -199,7 +201,9 @@
   <div class="publication-entry">
     <div class="pub-meta">
       <p class="pub-title">
+        <a href="https://dl.acm.org/doi/10.1145/3747327.3763043" target="_blank">
         When Pose Estimation Fails: Measuring Occlusion for Reliable Multimodal Interaction
+        </a>
       </p>
       <p class="pub-authors"><strong>Fan, C.</strong> & Chowdhury, T.</p>
       <p class="pub-venue"><em>ACM ICMI '25</em> (Accepted, to appear)</p>
