monkey morse code

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Cathy Fan Colby College",
-    "alternateName": ["Cathy Fan", "Chengyu Cathy Fan", "Cathy Fan Colby College", "Chengyu Fan Colby College"],
+    "alternateName": ["Cathy Fan", "Chengyu Cathy Fan", "Cathy Fan Colby College", "Chengyu Fan Colby College", "Humane Lab Colby College"],
     "jobTitle": "Undergraduate Researcher",
     "affiliation": {
       "@type": "CollegeOrUniversity",
@@ -242,6 +242,7 @@
   <footer>
     <div class="container">
       <p>&copy; 2025 Cathy Fan. Last updated: December 2025.</p>
+      <p>-- --- -. -.- . -.--</p>
     </div>
   </footer>
 
